more ggplot-ism implementation of the theme functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(geUseTheme)
 export(scale_color_ge)
 export(scale_colour_ge)
 export(scale_fill_ge)
+export(theme_bw_ge)
+export(theme_classic_ge)
 import(ggplot2)
 import(ggsci)
