change italicize.plot interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,9 @@ export(theme_bw_ge)
 export(theme_classic_ge)
 import(ggplot2)
 import(ggsci)
-importFrom(lazyeval,as_name)
+importFrom(grid,editGrob)
+importFrom(grid,gPath)
+importFrom(grid,getGrob)
+importFrom(grid,grid.force)
+importFrom(grid,grid.ls)
+importFrom(stringr,str_replace_all)
