use geom implementation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(scale_colour_ge)
 export(scale_fill_ge)
 export(theme_bw_ge)
 export(theme_classic_ge)
+export(theme_umap_ge)
 import(ggplot2)
 import(ggsci)
 importFrom(grid,editGrob)
